--- a/app/style.css
+++ b/app/style.css
@@ -3,3 +3,7 @@
 @utility login-links {
     @apply max-w-[640px] mx-auto mt-5 flex flex-col gap-4;
 }
+
+@utility wrapper {
+    @apply absolute flex flex-col inset-0;
+}
